        headers of plain html files served from Zope3 resource directories.
      
      - Changed the condtion checking for setting status of HTTPresponce from
	if( isinstance(status, types.ClassType) and issubclass(status, Exception))
	to if( isinstance(status, (type, types.ClassType)) and issubclass(status, Exception))
	for fixing the failures in the module Zope2

    Other Changes

      - Disabled docutils file inclusion completely, rather than trying
        to jigger it via configuration settings.

      - Returned to the "classic" './configure && make && make install'
        recipe, dropping the use of 'zpkg' for building Zope2 releases.

      - Added lib/python/webdav/litmus-results.txt explaining current
        test results from the litmus WebDAV torture test.

  Zope 2.10.0 beta 1 (2006/05/30)

    Restructuring

      - Zope 2.10+ now includes site.zcml as part of its instance
        creation skel directory.  As a consequence Five now requires
        this file to exist in every instance.  If upgrading a site
        from Zope 2.9 to 2.10, you will need to copy site.zcml and
        package-includes/ from your installed Zope installation
        location (skel/etc/) into the etc/ directory of your upgraded
        instance.

        The rationale for requiring this new file is to bring Zope 2
        instances closer in consistency to Zope 3 instances.  It also
        eases use of Zope 3 coding techniques in Zope 2 and removes
        some confusion when trying to run pure Zope 3 applications on
        Zope 2.

      - Products.PageTemplates now uses the Zope 3 ZPT implementation
        in zope.pagetemplate.

      - The TAL package has been deprecated in favour of the TAL
        engine from zope.tal.

      - Products.PageTemplates.TALES has been deprecated in favour of
        the TALES engine from zope.tales.

      - ZTUtils.Iterator has been deprecated in favour of the TALES
        iterator implementation in zope.tales.tales.
